--- a/gulimail-ware/src/main/resources/application.yml
+++ b/gulimail-ware/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10005
+  port: 10004
 
 spring:
   datasource:
@@ -17,6 +17,16 @@ spring:
       pool-name: SMSHikariPool # 连接池名称
   jackson:
     time-zone: GMT+8  # 设置程序运行时的时区
+
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 172.20.233.184:8848
+        username: nacos
+        password: 123456
+
+  application:
+    name: gulimail-ware
 
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
