--- a/gulimail-order/src/main/resources/application.yml
+++ b/gulimail-order/src/main/resources/application.yml
@@ -18,6 +18,16 @@ spring:
   jackson:
     time-zone: GMT+8  # 设置程序运行时的时区
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 172.20.233.184:8848
+        username: nacos
+        password: 123456
+
+  application:
+    name: gulimail-order
+
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
   configuration:
