--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,18 @@
         <knife4j.version>4.5.0</knife4j.version>
         <hutool.version>5.8.29</hutool.version>
         <mysql.version>8.3.0</mysql.version>
+        <alibaba.cloud.version>2023.0.1.0</alibaba.cloud.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${alibaba.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
             <!-- mysql驱动 -->
             <dependency>
