--- a/gulimail-member/pom.xml
+++ b/gulimail-member/pom.xml
@@ -29,6 +29,10 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.example</groupId>
