--- a/gulimail-common/pom.xml
+++ b/gulimail-common/pom.xml
@@ -20,6 +20,7 @@
 
     <dependencies>
 
+        <!-- 服务注册/发现 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
