--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,15 @@
         <module>renren-security</module>
         <module>gulimail-coupon</module>
         <module>gulimail-member</module>
+        <module>gulimail-gateway</module>
+        <module>gulimail-third-party</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.6</version>
+        <relativePath/>  <!-- lookup parent from repository -->
     </parent>
 
     <properties>
@@ -36,7 +39,7 @@
         <hutool.version>5.8.29</hutool.version>
         <mysql.version>8.3.0</mysql.version>
         <spring.cloud.version>2023.0.6</spring.cloud.version>
-        <alibaba.cloud.version>2023.0.1.0</alibaba.cloud.version>
+        <alibaba.cloud.version>2023.0.3.2</alibaba.cloud.version>
     </properties>
 
     <!-- 这个文件也许写在gulimail-common 模块更好 -->
