基础篇完结

--- a/gulimail-coupon/src/main/resources/application.yml
+++ b/gulimail-coupon/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10001
+  port: 18000
 
 spring:
   datasource:
@@ -17,8 +17,8 @@ spring:
       pool-name: SMSHikariPool # 连接池名称
   jackson:
     time-zone: GMT+8  # 设置程序运行时的时区
-  application:
-    name: gulimail-coupon
+#  application:
+#    name: gulimail-coupon
   cloud:
     nacos:
       discovery:
@@ -29,12 +29,12 @@ spring:
         server-addr: 172.20.233.184:8848
         username: nacos
         password: 123456
-        #        namespace: public
+#        namespace: public
         file-extension: properties
   config:
     import:
       - nacos:gulimail-coupon?group=DEFAULT_GROUP&file-extension=properties
-      - nacos:gulimail-coupon?group=dev&file-extension=properties
+#      - nacos:gulimail-coupon?group=dev&file-extension=properties
 
 
 #用于打印框架生成的sql语句，便于调试
