--- a/gulimail-gateway/pom.xml
+++ b/gulimail-gateway/pom.xml
@@ -7,24 +7,11 @@
         <artifactId>gulimail</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.example</groupId>
+
     <artifactId>gulimail-gateway</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>gulimail-gateway</name>
     <description>gulimail-gateway</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -36,13 +23,18 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>gulimail-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
