--- a/gulimail-product/src/main/resources/application.yml
+++ b/gulimail-product/src/main/resources/application.yml
@@ -30,11 +30,16 @@ spring:
 
   application:
     name: gulimail-product
+  data:
+    redis:
+      host: 172.20.233.184
+      port: 6379
+      database: 1
 
 #用于打印框架生成的sql语句，便于调试
 mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
       id-type: auto  # 设置主键为 自增
